--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<!DOCTYP html>
-<head>Hello</head> 
+<!<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>HelloApp</title>
+
+
+</head>
+<body>
+
+ </body>
+</html>
